--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,9 +5,9 @@
      
      Publish the source through github. 
      
-     For versions 6.x and later, you can use the binary as before. 
+     For versions DSM 6.x and later, you can use the binary as before. 
      
-     If you use busybox in 5.x, you can use it as a source file(ch_cpuinfo.sh).
+     If you use busybox in DSM 5.x, you can use it as a source file(ch_cpuinfo.sh).
 
 5.1.
    - Use bash change to sh
