--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,7 @@
    - Fix errors that occur during 2) Redo
      ex. grep: Unmatched ( or \(
 
-   - CPU informatio gathering method change for AMD CPU
+   - CPU information gathering method change for AMD CPU
      ex. sed: -e expression #1, char 40: unterminated `s' command
 
 2.2.1-r01.
