--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Change Log 
 
+3.3.1-r01.
+   - Update new version (ch_cpuinfo ver 3.3.1-r01) 2021.09.30
+
+   - After executing ch_cpuinfo, add the current CPU information output before applying
+
 3.1.1-r01.
    - Update new version (ch_cpuinfo ver 3.1.1-r01) 2021.09.26
 
