--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,8 @@
 
    - Add Updated date & Comment
 
+   - Updated README.md
+
 4.0.0-r01.
    - Update new version (ch_cpuinfo ver 4.0.0-r01) 2023.02.11 
 
