--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Change Log 
 
+4.2.1-r01.
+   - Update new version (ch_cpuinfo ver 4.2.1-r01) 2023.03.05
+
+   - Fixed error when users of previous version perform redo with version 4.2.0-r01
+
 4.2.0-r01.
    - Update new version (ch_cpuinfo ver 4.2.0-r01) 2023.02.18 
 
